fix image popup

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
 </script>
 <canvas id='doubleImage' style="width: 100%; height: 100%; display: none"></canvas>
-<a id="take_screenshot" onclick="takeScreenshot();">
+<a id="take_screenshot" onclick="takeScreenshot();" target="_blank">
   Take Photo
 </a>
 </body></html>
