--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <script>THREEx.ArToolkitContext.baseURL = './'</script>
 <style>
   body, html {
+    width: 100%;
     height: 100%;
     position: relative;
   }
@@ -222,6 +223,10 @@
   }
 
   function takeScreenshot(event) {
+    event.preventDefault();
+    var w = window.open("", "");
+    w.document.title = "Screenshot";
+    var img = new Image();
     var secondImg = new Image();
     renderer.render(scene, camera);
     var doubleImageCanvas = document.getElementById("doubleImage");
@@ -235,16 +240,17 @@
     loadImages(sources, function(images) {
       context.drawImage(images.firstImage, 0, 0, window.innerWidth, window.innerHeight);
       context.drawImage(images.secondImage, 0, 0, window.innerWidth, window.innerHeight);
-      document.getElementById('take_screenshot').href = canvasToImage.saveAsJPEG(doubleImageCanvas, window.innerWidth, window.innerHeight);
+      img.src = doubleImageCanvas.toDataURL("image/png");
+      img.style = "width: auto; max-height: 100%;";
+      w.document.body.appendChild(img);
+      console.log(window.innerWidth, window.innerHeight);
+      canvasToImage.saveAsJPEG(doubleImageCanvas, window.innerWidth, window.innerHeight);
     });
-
-    return false;
   }
-
 
 </script>
 <canvas id='doubleImage' style="width: 100%; height: 100%; display: none"></canvas>
-<a id="take_screenshot" onclick="takeScreenshot();" target="_blank" download="ar.jpg">
+<a id="take_screenshot" onclick="takeScreenshot(event);" target="_blank" download="ar.jpg">
   Take Photo
 </a>
 </body></html>
